@@ -33,6 +33,7 @@ import java.util.Optional;
 import java.util.concurrent.TimeUnit;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 
 public class ConditionManager {
 
@@ -69,9 +70,13 @@ public class ConditionManager {
         }
 
         String condition = parameters.get(0);
-        if (parameters.size() < 3) {
+        if (parameters.size() < 2) {
             plugin.getLogger().warn("Invalid condition: Missing true/false values for condition: {}. Parameters: {}", condition, parameters);
             return "";
+        }
+
+        if (parameters.size() == 2) {
+            parameters.add("");
         }
 
         condition = plugin.getPlaceholderManager().applyPlaceholders(target, condition);
@@ -88,7 +93,7 @@ public class ConditionManager {
 
         return Arrays.stream(argument.split(":"))
                 .map(s -> s.replace("''", "\""))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @NotNull
@@ -105,7 +110,10 @@ public class ConditionManager {
 
     @NotNull
     private String buildExpression(@NotNull String condition) {
-        return condition.replace("and", "&&").replace("or", "||")
+        return condition
+                .replace("GREATER_THAN_OR_EQUAL", ">=").replace("LESS_THAN_OR_EQUAL", "<=")
+                .replace("GREATER_THAN", ">").replace("LESS_THAN", "<")
+                .replace("and", "&&").replace("or", "||")
                 .replace("AND", "&&").replace("OR", "||");
     }
 
